--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -16917,6 +16917,7 @@ Concentric</property>
                                                             <child>
                                                             <widget class="GtkProgressBar" id="encoder_pulsebar_rhythm_wait">
                                                             <property name="width_request">120</property>
+                                                            <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="pulse_step">0.050000000000000003</property>
                                                             </widget>
