--- a/glade/repetitive_conditions.glade
+++ b/glade/repetitive_conditions.glade
@@ -3737,7 +3737,7 @@
                                 <property name="secondary_icon_activatable">False</property>
                                 <property name="primary_icon_sensitive">True</property>
                                 <property name="secondary_icon_sensitive">True</property>
-                                <property name="adjustment">1 0.10000000000000001 99 0.10000000000000001 1 0</property>
+                                <property name="adjustment">1 0 99 0.10000000000000001 1 0</property>
                                 <property name="digits">2</property>
                               </widget>
                               <packing>
@@ -3824,7 +3824,7 @@
                                         <property name="secondary_icon_activatable">False</property>
                                         <property name="primary_icon_sensitive">True</property>
                                         <property name="secondary_icon_sensitive">True</property>
-                                        <property name="adjustment">5 1 30 1 10 0</property>
+                                        <property name="adjustment">5 2 30 1 10 0</property>
                                         <property name="digits">2</property>
                                       </widget>
                                       <packing>
